tests/paczka1/fuzzy1/20807866.err
Error in line 1: UZtkbYi1c S57z 35,8
Error in line 9: duDSxHV5L3B A93 9,1
Error in line 13: GFF S703 64,1
Error in line 15: UZtkbYi1c A93 57,6
Error in line 20: UZtkbYi1c S574 46,3
Error in line 19: S574 A93 83,0
Error in line 21: UZtkbYi1c A696 93,9
Error in line 29: Y7lSl A93 65,5
